# Breakout_learn

./: CMakeLists.txt
Breakout/: CMakeLists.txt
Breakout/resources/: particle.fs  post_processing.fs  post_processing.vs  sprite.fs  text_2d.fs
Breakout/src/: Breakout.cpp  Game.cpp  Game.h  ball_object.cpp  ball_object.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  particle_generator.cpp  particle_generator.h  post_processing.cpp  post_processing.h  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_render.cpp  sprite_render.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
